14-Uso de properties(name,last) y valores. y los usa en archivos(clases)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 
 server.servlet.context-path=/app
 server.port=8081
+
+#propiedades y valores se pueden asignar a archivo(clases)
+value.name=Gerson
+value.apellido=Ep
+Value.random=${random.value}
