15 Uso de properties con ejemplo de generacion de POJO. Configurar pojo a nivel de properties en el proyecto de Spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ server.port=8081
 value.name=Gerson
 value.apellido=Ep
 Value.random=${random.value}
+
+#Crear propiedades a partir de una clase que representara las propiedades(package:pojo)
+user.email=test@gmail.com
+user.password=123467
+user.age=27
