16 Que son los logs y como usarlos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,15 @@ Value.random=${random.value}
 user.email=test@gmail.com
 user.password=123467
 user.age=27
+
+#En este recurso porgramamos los niveles de log que queremos mostrar en el servidor
+#por defencto los log vienen en el servidor, son los que estan comentados
+#logging.level.root=info
+#logging.level.org.springframework.web=info
+#logging.level.org.hibernate=error
+
+#para ver el funcionamiento se cambian los niveles de log y se reinicia el servidor para ver.
+logging.level.root=debug  
+logging.level.org.springframework.web=info   
+logging.level.org.hibernate=error 
+
