--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,11 @@
 			<scope>test</scope>
 		</dependency>
 
-
-
-		<!-- buscando reconstruir sin reiniciar de devtools, corrige el error: java: package org.junit.jupiter.api does not exist -->
+		<!--JPA para acceder, conservar y administrar datos entre objetos o clases y una BD relacioal  -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 
 	</dependencies>
