18 Configuracion de dataSource con properties y clases. Config. para la connexion a la BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,23 @@ logging.level.root=debug
 logging.level.org.springframework.web=info   
 logging.level.org.hibernate=error 
 
+#seleccionar + ctrl+ /   :selepara comentar
+
+#configuracion de la BD a nivel de properties: ejem: relacionado a la base de datos H2
+#spring.datasource.url=jdbc:h2:mem:testdb    #url y nombre de BD
+#spring.datasource.driveClassName=org.h2.Driver   #driver escane la BD dada
+#spring.datasource.username=sa #usuario
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect  #dialecto o implementacion a nivel de BD
+
+#con la configuracion anterior de la BD ya podemos crear nuestro repository y podemos crear eliminar mostrar, etc. valores de la BD
+
+#En Springboot configura toda esas dependencias lo podemos hacer de forma manual
+#Por lo que la configuracion a nivel de base de datos la haremos en la carpeta configuracion: componente-GeneralConfiguration
+
+
+
+
+
+
+
