19 Registro en base de datos con JpaRepository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 server.servlet.context-path=/app
-server.port=8081
+server.port=8080
 
 #propiedades y valores se pueden asignar a archivo(clases)
 value.name=Gerson
@@ -9,9 +9,9 @@ value.apellido=Ep
 Value.random=${random.value}
 
 #Crear propiedades a partir de una clase que representara las propiedades(package:pojo)
-user.email=test@gmail.com
-user.password=123467
-user.age=27
+#user.email=test@gmail.com
+#user.password=123467
+#user.age=27
 
 #En este recurso porgramamos los niveles de log que queremos mostrar en el servidor
 #por defencto los log vienen en el servidor, son los que estan comentados
@@ -20,11 +20,14 @@ user.age=27
 #logging.level.org.hibernate=error
 
 #para ver el funcionamiento se cambian los niveles de log y se reinicia el servidor para ver.
-logging.level.root=debug  
+logging.level.root=info 
 logging.level.org.springframework.web=info   
 logging.level.org.hibernate=error 
 
-#seleccionar + ctrl+ /   :selepara comentar
+#muestra codigo sql que se genera a nivel del servidor
+spring.jpa.show-sql=true  
+
+#seleccionar + ctrl+ /   :sele para comentar
 
 #configuracion de la BD a nivel de properties: ejem: relacionado a la base de datos H2
 #spring.datasource.url=jdbc:h2:mem:testdb    #url y nombre de BD
