21 Uso de anotaciones Value para apuntar a properties. Otra forma de confi la conexion a la BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,8 @@ spring.jpa.show-sql=true
 #Por lo que la configuracion a nivel de base de datos la haremos en la carpeta configuracion: componente-GeneralConfiguration
 
 
+#crear una nueva propiedad:
+#clic derecho resources-->new --> file-->write the name-->connetion.properties
 
 
 
